# slurm

./: NEWS  RELEASE_NOTES  configure  configure.ac  slurm.spec
doc/html/: configurator.easy.html.in  configurator.html.in  mpi_guide.shtml  mpiplugins.shtml  team.shtml
slurm/: slurm.h.in  slurmdb.h
src/api/: init_msg.c  update_config.c
src/common/: assoc_mgr.c  assoc_mgr.h  gres.c  gres.h  layouts_mgr.c  layouts_mgr.h  node_conf.c  node_conf.h  pack.c  pack.h  read_config.c  read_config.h  slurm_accounting_storage.c  slurm_accounting_storage.h  slurm_protocol_api.c  slurm_protocol_api.h  slurm_protocol_defs.c  slurm_protocol_defs.h  slurm_protocol_pack.c  slurm_xlator.h  slurmdb_defs.c  slurmdb_defs.h  slurmdb_pack.c  slurmdb_pack.h  slurmdbd_defs.c  slurmdbd_defs.h
src/db_api/: cluster_report_functions.c  job_report_functions.c  user_report_functions.c
src/plugins/job_submit/ccr_qos/: Makefile.am  job_submit_ccr_qos.c
src/plugins/job_submit/save_script/: Makefile.am  job_submit_save_script.c
src/plugins/mpi/sgimpt/: Makefile.am  Makefile.in  mpi_sgimpt.c
src/sacct/: print.c  sacct.c  sacct.h
src/sacctmgr/: cluster_functions.c  common.c  event_functions.c  sacctmgr.c  sacctmgr.h
src/scontrol/: Makefile.am  Makefile.in  scontrol.c  scontrol.h
src/slurmctld/: acct_policy.c  controller.c  job_mgr.c  node_mgr.c  node_scheduler.c  proc_req.c  read_config.c  reservation.c  slurmctld.h
src/slurmdbd/: proc_req.c  rpc_mgr.c  slurmdbd.c
src/slurmrestd/: conmgr.c  openapi.c  openapi.json  operations.c
src/sreport/: cluster_reports.c  common.c  (+2 more)
(+50 files in other folders)
